# Refactor-and-CI

.github/workflows/: main.yaml  main.yml
refactorNCI/: main.py  pyproject.toml
refactorNCI/tests/: test_node.py
