[tool.poetry]
name = "refactornci"
version = "0.1.0"
description = ""
authors = ["Eric J <51121192+EricJ-code@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^6.2"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
